# ingenuity

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  about.html  advanced-ai.html  ai-ethics.html  citation.cff  documentation.html  gemini.html  index.html  package-lock.json  package.json  partners.html  privacy-policy.md  qwen3-235b.html  robots.txt  script.js  server.js  settings.html  sitemap.xml  styles.css  terms-of-service.md  terms.html  test-gemini.js  together_api.cpp  transformers.html  vercel.json  word-scramble.js
cpp-client/: README.md
template/: about.html  advanced-ai.html  ai-ethics.html  documentation.html  gemini.html  index.html  partners.html  qwen3-235b.html  script.js  settings.html  styles.css  terms.html  transformers.html
template/assets/: CONTRIBUTING.md
